--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/auth0/in-memory-todo",
   "dependencies": {
-    "body-parser": "^1.6.5",
+    "body-parserSSS": "^1.6.5",
     "compression": "^1.0.11",
     "cors": "^2.4.1",
     "dotenv": "^0.4.0",
